--- a/U1_GeometricPointSearch/widget.ui
+++ b/U1_GeometricPointSearch/widget.ui
@@ -6,27 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1051</width>
-    <height>733</height>
+    <width>1024</width>
+    <height>722</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Draw points</string>
+   <string>Analyze point and polygon position</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
-   <item>
-    <spacer name="verticalSpacer_4">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item>
     <widget class="Draw" name="Canvas" native="true">
      <property name="sizePolicy">
@@ -35,25 +22,29 @@
        <verstretch>1</verstretch>
       </sizepolicy>
      </property>
-     <widget class="QPlainTextEdit" name="plainTextEdit">
-      <property name="geometry">
-       <rect>
-        <x>710</x>
-        <y>590</y>
-        <width>131</width>
-        <height>91</height>
-       </rect>
-      </property>
-     </widget>
     </widget>
    </item>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QPushButton" name="pushButton_import_polygon">
+      <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Import polygon</string>
+        <string>Select method:</string>
        </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBox">
+       <item>
+        <property name="text">
+         <string>Winding Algorithm</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Ray Crossing Algorithm</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
@@ -70,9 +61,29 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_draw">
+      <widget class="QPushButton" name="pushButton_3">
        <property name="text">
         <string>Draw pt/poly</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="verticalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_import_polygon">
+       <property name="text">
+        <string>Import polygon</string>
        </property>
       </widget>
      </item>
@@ -81,18 +92,28 @@
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
-         <height>100</height>
+         <height>300</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="removeLastButton">
+      <widget class="QPushButton" name="pushButton_4">
        <property name="text">
-        <string>Remove last</string>
+        <string>Analyze</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
@@ -101,19 +122,16 @@
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Expanding</enum>
-       </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>0</width>
-         <height>0</height>
+         <width>20</width>
+         <height>40</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="clearButton">
+      <widget class="QPushButton" name="pushButton_2">
        <property name="text">
         <string>Clear</string>
        </property>
