--- a/U1_GeometricPointSearch/widget.ui
+++ b/U1_GeometricPointSearch/widget.ui
@@ -61,7 +61,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="drawModeButton">
        <property name="text">
         <string>Draw pt/poly</string>
        </property>
@@ -81,7 +81,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_import_polygon">
+      <widget class="QPushButton" name="importPolygonButton">
        <property name="text">
         <string>Import polygon</string>
        </property>
@@ -104,7 +104,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="analyzeButton">
        <property name="text">
         <string>Analyze</string>
        </property>
@@ -131,7 +131,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="clearButton">
        <property name="text">
         <string>Clear</string>
        </property>
